# bytes-codec

./: LICENSE  bytes-codec.cabal
src/Data/Bytes/: Codec.hs
